2009-11-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/freebsd.h:
	* s/netbsd.h: Remove code referring to non-existent file: unexsunos4.o.

	* Makefile.in: Add dependencies to lisp.h.  Remove dependencies
	for non-existent files: unexmips.c, unexnext.c, abbrev.c, malloc.c.

	* xfns.c (syms_of_xfns): Use make_pure_string instead of build_string.
	* xterm.c (syms_of_xterm):
	* xfaces.c (syms_of_xfaces):
	* xdisp.c (syms_of_xdisp):
	* lread.c (syms_of_lread):
	* keyboard.c (syms_of_keyboard): Use make_pure_c_string instead of
	build_string.
	* doc.c (Fsnarf_documentation): Purecopy Vbuild_files.

2009-11-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fns.c (Fplist_get): Merge the active and the uncommented code.

2009-11-10  Jan Djärv  <jan.h.d@swipnet.se>

	* keyboard.h: Declare timer_check.

	* keyboard.c (timer_check_2): New function that does what the old
	timer_check did.
	(timer_check): Call timer_check_2 until -1 or a non-zero time is
	returned, i.e. don't return -1 with timers pending.

	* process.c: Remove extern declaration of timer_check.

	* xmenu.c (x_menu_wait_for_event): Remove code that did a timeout
	even if timer_check returned -1.

	* gtkutil.c (xg_dialog_response_cb): Data is now a struct
	xg_dialog_data.
	(pop_down_dialog): Destroy widget (if any), cancel timer and unref
	the event loop.
	(xg_maybe_add_timer, xg_dialog_run): New functions (bug #4574).
	(xg_get_file_name, xg_get_font_name): Call xg_dialog_run (bug #4574).
	Destroy the dialog after xg_dialog_run.

2009-11-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* menu.c (Fx_popup_menu) [HAVE_NS]: Remove unused vars.

2009-11-10  Jan Djärv  <jan.h.d@swipnet.se>

	* xmenu.c (xmenu_show): Must not be static after 2009-11-09 changes.

2009-11-09  Juanma Barranquero  <lekktu@gmail.com>

	* menu.c [HAVE_NTGUI]: Declare current_popup_menu.

2009-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* menu.c (Fx_popup_menu): Consolidate versions from xmenu.c,
	w32menu.c, and nsmenu.m.